#15 Added extensive dark mode styles to site.css for login and patient views. Fixed patient index form ethnicity section messing up the submit button placement.

--- a/EHRApplication/EHRApplication/wwwroot/css/patient.css
+++ b/EHRApplication/EHRApplication/wwwroot/css/patient.css
@@ -44,18 +44,3 @@ section .invalid-feedback {
 }
 
 
-/* CSS for Tablet and Desktop View */
-@media (min-width: 1000px) {
-    .race-column {
-        width: 50%; 
-        float: left; 
-    }
-}
-
-/* CSS for Mobile View */
-@media (max-width: 1001px) {
-    .race-column {
-        width: 100%; 
-        float: none; 
-    }
-}
